
      \item Illegal factors, e.g., with duplicated levels (illegal but
      constructable) now give a warning when printed, via new
      \code{.valid.factor}.

      \item \code{sessionInfo()} has been updated for Apple's change in
      OS naming as from \sQuote{10.12} (\sQuote{macOS Sierra}).

      Its \code{toLatex()} method now includes the \code{running}
      component.

      \code{options("interrupt")} can be used to specify a default
      action for user interrupts. For now, if this option is not set and
      the \code{error} option is set, then an unhandled user interrupt
      invokes the \code{error} option. This may be dropped in the future
      as \code{interrupt} conditions are not \code{error} conditions.
    }
  }
  \subsection{INSTALLATION and INCLUDED SOFTWARE}{
    \itemize{
      \item \code{readline} headers (and not just the library) are
      required unless configuring with \option{--with-readline=no}.

      \item (Windows only) Tcl/Tk version 8.6.4 is now included in the
      binary builds.  The \file{tcltk*.chm} help file is no longer
      included; please consult the online help at
      \url{http://www.tcl.tk/man/} instead.
    }
  }
  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item The deprecated support for PCRE versions 8.10 to 8.31 will
      be removed prior to \R 3.4.0.

      \item (Windows only) Function \code{setInternet2()} is defunct.
      
      \item Installation support for \code{readline} emulations based on
      \code{editline} (aka \code{libedit}) is deprecated.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Getting or setting \code{body()} or \code{formals()} on
      non-functions for now signals a warning and may become an error
      for setting.

      \item When a class name matches multiple classes in the cache,
      perform a dynamic search in order to obey namespace imports. This
      should eliminate annoying messages about multiple hits in the