@@ -119,7 +119,7 @@ int R_SelectEx(int n, fd_set *readfds, fd_set *writefds, fd_set *exceptfds, stru
         return select(n, readfds, writefds, exceptfds, timeout);
     else
     {
-        volatile sel_intr_handler_t myintr = intr != NULL ? intr : onintr;
+        volatile sel_intr_handler_t myintr = intr != NULL ? intr : onintrNoResume;
         volatile int old_interrupts_suspended = R_interrupts_suspended;
         if (SIGSETJMP(seljmpbuf, 1))
         {
@@ -680,7 +680,7 @@ static void readline_handler(char *line)
 static void handleInterrupt(void)
 {
     popReadline();
-    onintr();
+    onintrNoResume();
 }
 
 #ifdef HAVE_RL_COMPLETION_MATCHES
@@ -906,7 +906,7 @@ attribute_hidden void set_rl_word_breaks(const char *str)
 #else
 static void handleInterrupt(void)
 {
-    onintr();
+    onintrNoResume();
 }
 #endif /* HAVE_LIBREADLINE */
 
